change table to display background correctly on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,9 @@ p, div {
 	.fancy-table tr:nth-of-type(odd) {
 		background: #eee;
 	}
+	.fancy-table tr:nth-of-type(even) {
+		background: white;
+	}
 	.fancy-table th {
 		background: #333;
 		color: white;
